<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.SubmitQuestionActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/adViewBannerSubmitQuestion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/textViewSubmitQuestionTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/padding_small"
                android:layout_marginBottom="@dimen/padding_large"
                android:text="@string/submit_question_title"
                android:textSize="@dimen/text_size_medium"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/spinnerSelectCourse"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginBottom="@dimen/padding_medium"
                android:prompt="@string/submit_select_course" />

            <EditText
                android:id="@+id/editTextQuestionText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="@dimen/edittext_height"
                android:layout_marginBottom="@dimen/padding_medium"
                android:hint="@string/submit_question_text_hint"
                android:inputType="textMultiLine"
                android:gravity="top"
                android:background="@drawable/edittext_background"
                android:padding="12dp"/>

            <EditText
                android:id="@+id/editTextOptionA"
                style="@style/SubmitOptionEditText"
                android:hint="@string/submit_option_a_hint" />
            <EditText
                android:id="@+id/editTextOptionB"
                style="@style/SubmitOptionEditText"
                android:hint="@string/submit_option_b_hint" />
            <EditText
                android:id="@+id/editTextOptionC"
                style="@style/SubmitOptionEditText"
                android:hint="@string/submit_option_c_hint" />
            <EditText
                android:id="@+id/editTextOptionD"
                style="@style/SubmitOptionEditText"
                android:hint="@string/submit_option_d_hint" />
            <EditText
                android:id="@+id/editTextOptionE"
                style="@style/SubmitOptionEditText"
                android:hint="@string/submit_option_e_hint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit_correct_answer_label"
                android:textSize="@dimen/text_size_medium"
                android:layout_marginTop="@dimen/padding_small"/>

            <Spinner
                android:id="@+id/spinnerCorrectAnswer"
                android:layout_width="match_parent"
                android:layout_height="@dimen/edittext_height"
                android:layout_marginBottom="@dimen/padding_medium" />

            <Button
                android:id="@+id/buttonAddPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/padding_small"
                android:text="@string/submit_add_photo" />

            <ImageView
                android:id="@+id/imageViewSelectedPhotoPreview"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="@dimen/padding_medium"
                android:scaleType="centerCrop"
                android:visibility="gone"
                tools:srcCompat="@tools:sample/avatars"
                android:contentDescription="Seçilen Fotoğraf Önizlemesi"/>

            <CheckBox
                android:id="@+id/checkboxIsPremiumOnly"
                android:layout_width="394dp"
                android:layout_height="31dp"
                android:text="Premium'a Özel olsun mu?" />

            <Button
                android:id="@+id/buttonSubmitQuestion"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_height"
                android:text="@string/submit_button" />

            <ProgressBar
                android:id="@+id/progressBarSubmitQuestion"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
            <ImageView
                android:id="@+id/imageViewSelectedPhotoPreviewSubmit"
                android:layout_width="150dp"   android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="@dimen/padding_medium"
                android:scaleType="centerCrop"
                android:visibility="gone"
                android:contentDescription="Seçilen Fotoğraf Önizlemesi"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/adViewBannerSubmitQuestion"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/ad_placeholder_banner"
        android:gravity="center"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>