<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".activities.RegisterActivity">

    <TextView
        android:id="@+id/textViewRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Hesap Oluştur"
        android:textSize="@dimen/text_size_xlarge"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextRegisterUsername"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginTop="@dimen/padding_large"
        android:hint="@string/register_username_hint"
        android:inputType="textPersonName"
        android:background="@drawable/edittext_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/textViewRegisterTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextRegisterEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginTop="@dimen/padding_medium"
        android:hint="@string/register_email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterUsername"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextRegisterPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginTop="@dimen/padding_medium"
        android:hint="@string/register_password_hint"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <EditText
        android:id="@+id/editTextRegisterConfirmPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginTop="@dimen/padding_medium"
        android:hint="@string/register_confirm_password_hint"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/register_button_text"
        app:layout_constraintTop_toBottomOf="@+id/editTextRegisterConfirmPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayoutLoginLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding_medium"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/textViewAlreadyHaveAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_already_have_account_text"
            android:textSize="@dimen/text_size_medium"/>

        <TextView
            android:id="@+id/textViewLoginNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/register_login_now_text"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_medium"/>
    </LinearLayout>

    <TextView
        android:id="@+id/adViewBannerRegister"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/ad_placeholder_banner"
        android:gravity="center"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>