<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context=".activities.LoginActivity">

    <ImageView
        android:id="@+id/imageViewLogoLogin"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="32dp"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editTextLoginEmail"
        app:layout_constraintVertical_chainStyle="packed"
        android:contentDescription="@string/app_name" />

    <EditText
        android:id="@+id/editTextLoginEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginTop="32dp"
        android:hint="@string/login_email_hint"
        android:inputType="textEmailAddress"
        android:background="@drawable/edittext_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageViewLogoLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/editTextLoginPassword" />

    <EditText
        android:id="@+id/editTextLoginPassword"
        android:layout_width="0dp"
        android:layout_height="@dimen/edittext_height"
        android:layout_marginTop="@dimen/padding_medium"
        android:hint="@string/login_password_hint"
        android:inputType="textPassword"
        android:background="@drawable/edittext_background"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginEmail"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/buttonLogin" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/login_button_text"
        app:layout_constraintTop_toBottomOf="@+id/editTextLoginPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/linearLayoutRegisterLink" />

    <LinearLayout
        android:id="@+id/linearLayoutRegisterLink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/padding_medium"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:id="@+id/textViewNoAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_no_account_text"
            android:textSize="@dimen/text_size_medium"/>

        <TextView
            android:id="@+id/textViewRegisterNow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/login_register_now_text"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            android:textSize="@dimen/text_size_medium"/>
        <TextView
            android:id="@+id/textViewResendVerification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Doğrulama E-postasını Yeniden Gönder"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:padding="8dp"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutRegisterLink"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="8dp"/>
        <ProgressBar
            android:id="@+id/progressBarLogin"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"  app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
    </LinearLayout>

    <TextView
        android:id="@+id/adViewBannerLogin"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/ad_placeholder_banner"
        android:gravity="center"
        android:background="@color/light_grey"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>